# depin-open-droneid

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  beacon_frames_howlong.pcap  capture-01.cap  capture_output-pink.pcap  capture_output-purple.pcap  capture_output-standby.pcap  capture_output.pcap  docker-compose.yml  dump-1-5ghz-01.pcap  dump-2-5ghz.pcap  dump-2-5ghz.pcap-02.cap  output-01.cap  output-02.pcap  output-03.cap  output-le.pcap-01.cap  output-standby-01.cap  output-yee-01.cap  output.pcap  trebuchet.yml
.github/workflows/: changelog.yml  release.yml
assets/css/: drone.css  interface.css
assets/js/: Api.js  App.js  Components.js  Drone.js  MapView.js  SetupView.js  Store.js
data/: wifi_packet_data.txt
fixtures/: bluetooth_basic_id_packet.txt  bluetooth_location_packet.txt  bluetooth_packet_data.txt  bluetooth_system_packet.txt  odid_basic_id_packet.txt  odid_location_packet.txt  odid_system_packet.txt  wifi_packet_data.txt  wlan_beacon_packet_data.txt
migrations/: 000-init.sql  0001_init.sql
packet-data/: beacon_frames.pcap  capture_output-01.cap  capture_output-01.csv  capture_output-01.kismet.csv  capture_output-01.kismet.netxml  capture_output-01.log.csv  capture_output.pcap  wlan_broadcast.pcap
src/: bluetooth.rs  drone.rs  lib.rs  main.rs  messages.rs  models.rs  parsers.rs  router.rs  routes.rs  templates.rs  wifi.rs
src/app/: config.rs  error.rs  mod.rs
src/bluetooth/: config.rs  entity.rs  mod.rs  repo.rs  task.rs
src/cli/: config.rs  mod.rs
src/drone/: entity.rs
src/miner/: config.rs  mod.rs
src/mqtt_client/: config.rs  error.rs  mod.rs
src/odid/: entity.rs  repo.rs
src/web/: config.rs  drone_dto.rs  mod.rs  router.rs  routes.rs  task.rs
src/wifi/: config.rs  entity.rs  frame.rs  interface.rs  mod.rs  repo.rs  task.rs
templates/: index.html
templates/css/: main.css
templates/js/: Api.js  App.js  Component.js  Drone.js  MapView.js  SetupView.js  Store.js
