[package]
name = "trebuchet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["ws"] }
bluez-async = "0.7.2"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.4"
futures = "0.3.30"
pcap = { version = "2.0.0", features = ["tokio"] }
pnet = "0.35.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
simple_wifi = "0.1.6"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
