[package]
name = "trebuchet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["ws"] }
bluez-async = "0.7.2"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["cargo"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
pcap = { version = "2.0.0", features = ["tokio"] }
pnet = "0.35.0"
serde_json = "1.0.117"
simple_wifi = "0.1.6"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
packed_struct = { version = "0.10.1", features = ["use_serde"] }
bincode = "1.3.3"
radiotap = "1.3.0"
nom = "7.1.3"
derive_builder = "0.20.0"
libwifi = "0.3.1"
log = "0.4.22"
env_logger = "0.11.3"
