[package]
name = "trebuchet-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_trebuchet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["ws"] }
bluez-async = "0.7.2"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
clap = { version = "4.4", features = ["derive", "env"] }
futures = "0.3.30"
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
thiserror = "1.0.63"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.117"
serde_with = "3.8.1"
serde_bytes = "0.11"
pcap = { version = "2.0.0", features = ["tokio"] }
pnet = "0.35.0"
simple_wifi = "0.1.6"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
packed_struct = { version = "0.10.1", features = ["use_serde"] }
bincode = "1.3.3"
radiotap = "1.3.0"
nom = "7.1.3"
derive_builder = "0.20.0"
libwifi = "0.3.1"
log = "0.4.22"
env_logger = "0.11.3"
console-subscriber = "0.4.0"
fake = { version = "2.8", features=["derive", "chrono", "chrono-tz", "geo", "rust_decimal"] }
rand = "0.8.5"
sha2 = "0.10.8"
